Optimize BitBoard attack map caching